; ModuleID = '/home/carl/AnghaBench/streem/src/extr_value.c_strm_p.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_value.c_strm_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @strm_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [7 x i8], align 1
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @strm_to_str(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds [7 x i8], [7 x i8]* %3, i64 0, i64 0
  %10 = call i8* @strm_str_cstr(i32 %8, i8* %9)
  store i8* %10, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* @stdout, align 4
  %13 = call i32 @fputs(i8* %11, i32 %12)
  %14 = load i32, i32* @stdout, align 4
  %15 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i32 @strm_to_str(i32) #1

declare dso_local i8* @strm_str_cstr(i32, i8*) #1

declare dso_local i32 @fputs(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
